# inf_score_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: pixel_locations.json  state_locations.txt
inf_score_analyzer/: __init__.py  __main__.py  ac_diff.py  color_presets.py  constants.py  csv_processor.py  download_12sp_tables.py  download_kamaitachi_metadata.py  download_textage_tables.py  frame_utilities.py  game_state_frame_processor.py  game_state_pixels.py  hd_game_state_frame_processor.py  hd_play_frame_processor.py  hd_score_frame_processor.py  kamaitachi_client.py  kamaitachi_export.py  local_dataclasses.py  play_frame_processor.py  score_frame_processor.py  song_reference.py  song_select_frame_processor.py  sqlite_client.py  sqlite_setup.py  text_gradients.py  twelve_parser.py
rust-textage-parser/: Cargo.toml  find_mismatching_titles.py  test.py  textage_to_bpi_normalizer.json
rust-textage-parser/src/: main.rs
tests/: game_state_test.py  play_frame_metadata_test.py  song_select_test.py  test_clear_types.py  test_percentage_frame_process.py  test_play_frame_processor.py  test_score_frame_processor.py  test_score_reader.py  test_song_reference.py
tests/clear_type_frames/: all clear types.pxm  cropped clear types.pxm
