[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name  = "inf_score_analyzer"
version = "1.1.0"
dependencies = [
    "opencv-python==4.7.0.72",
    "pytesseract==0.3.10",
    "requests==2.32.2",
    "types-requests==2.32.0.20240521",
    "line_profiler==4.1.2",
    "polyleven==0.8",
    "pytest==7.4.3",
]

[tool.setuptools]
packages = ["inf_score_analyzer"]
