[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name  = "inf_score_analyzer"
version = "1.1.0"
dependencies = [
    "opencv-python",
    "pytesseract",
    "requests",
    "types-requests",
    "line_profiler",
    "polyleven",
    "pytest",
]

[tool.setuptools]
packages = ["inf_score_analyzer"]
