[package]
name = "rust-textage-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.132"
chrono = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] } 
regex = "1.11.0"
